CSS header: fix logo, geoportal, spacing
GeoPortal now matches https://dataservices.library.jhu.edu/ in layout/presentation

--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -6,13 +6,13 @@
 #topnav {
   background: none;
   border: 0;
-  height: 134px;
+  height: 140px;
   margin-bottom: 0;
   padding: 0px;
 
   a img {
     float: left;
-    margin-left:1rem;
+    margin-left:1.1rem;
   }
 
   .site-name {
@@ -20,7 +20,7 @@
       border-left: 1px solid $black;
       display:inline;
       position: relative;
-      top:4rem;
+      top:3.9rem;
       left:1rem;
       padding: 1rem;
       padding-left:2rem;
